--- a/src/index.css
+++ b/src/index.css
@@ -67,13 +67,13 @@ main {
   gap: 30px;
   margin: 30px 0;
 }
-.help-layout nav a{
+.help-layout nav a {
   padding: 10px;
   border: 2px solid white;
   border-radius: 4px;
   text-decoration: none;
 }
-.help-layout nav a:hover{
+.help-layout nav a:hover {
   border-color: var(--primary);
 }
 .help-layout nav a.active {
@@ -82,7 +82,7 @@ main {
 
 /* faq */
 .faq .question {
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
   padding: 5px 20px;
   border-radius: 4px;
   margin: 20px 0;
@@ -92,10 +92,13 @@ main {
 form {
   margin-top: 30px;
 }
-form input, form label span, form textarea {
+form input,
+form label span,
+form textarea {
   display: block;
 }
-form input, form textarea {
+form input,
+form textarea {
   margin-bottom: 30px;
   padding: 8px;
   border-radius: 4px;
@@ -110,7 +113,7 @@ form label span {
 /* careers list */
 .careers > a {
   display: block;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
   padding: 20px;
   border-radius: 4px;
   margin: 20px 0;
@@ -123,16 +126,34 @@ form label span {
   margin: 0;
 }
 .careers > a p:last-child {
- font-size: 0.8em;
- color: #bbb;
+  font-size: 0.8em;
+  color: #bbb;
 }
 
 /* careers details */
 .career-details {
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
   padding: 20px;
   border-radius: 4px;
   margin: 20px 0;
 }
 
 /* breadcrumbs */
+.breadcrumbs {
+  max-width: 1200px;
+  margin: 20px auto;
+}
+.breadcrumbs > * {
+  display: inline-block;
+  margin-right: 10px;
+}
+.breadcrumbs .crumb:after {
+  content: ">";
+  margin-left: 10px;
+}
+.breadcrumbs .crumb:last-child:after {
+  display: none;
+}
+.breadcrumbs .crumb a {
+  color: #ddd;
+}
